tests/parser/valid/ok_expr_prec.c
int main() {
  2 + 3 * (4 - 1);
  return 0;
}
