tests/parser/invalid/err_expr_expected_got_paren.c
int main() {
  ();
}
// ( followed by expression expected